Playing around with the page content

--- a/index.html
+++ b/index.html
@@ -2,35 +2,37 @@
 <html>
     <head>
         <title>SDovgin</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- Banner section-->
         <div class="banner">
-            <h1>Sarah's landing banner</h1>
+            <h1>Hi I'm Sarah!</h1>
+            <h3>This is my home page</h3>
             <img id="small-sarah" src="./resources/images/SarahDovgin.png" alt="">
-            <p>This is a good paragraph</p>
-            <button>Subscribe pls</button>
+            <p>This is where I keep all of my projects</p>
             <link rel="stylesheet" href="./resources/css/index.css">
         </div>
 
         <!-- Body section-->
         <div>
-            <span class="bold" id="sarah">Sarah</span>
-            <p class="bold">This is a social media section</p>
+            <span class="bold" id="sarah">Hi Lior :)</span>
+            <p class="bold">:O</p>
             <form action="">
                 <input type="text"/>
                 <input type="submit" value="Submit">
             </form>
             <div>
+                <h2>Things to add</h2>
                 <ul>
                     <li>
-                        <div></div><span>Hey there it's me again</span>
+                        <div></div><span>Resume</span>
                     </li>
                     <li>
-                        <div></div><span>Hey there it's me again</span>
+                        <div></div><span>More pages</span>
                     </li>
                     <li>
-                        <div></div><span>Hey there it's me again</span>
+                        <div></div><span>Projects</span>
                     </li>
                 </ul>
             </div>
