Skeleton for the webpage information

--- a/index.html
+++ b/index.html
@@ -7,21 +7,19 @@
     <body>
         <!-- Banner section-->
         <div class="banner">
-            <h1>Hi I'm Sarah!</h1>
-            <h3>This is my home page</h3>
-            <img id="small-sarah" src="./resources/images/SarahDovgin.png" alt="">
-            <p>This is where I keep all of my projects</p>
+            <h1>Hi, I'm Sarah</h1>
+            <h3>Welcome to my home page</h3>
+            <img id="profile" src="./resources/images/SarahDovgin.png" alt="">
+            <p>I'm a coder, runner, artist, dog-lover, and Data Engineer at OM1</p>
             <link rel="stylesheet" href="./resources/css/index.css">
         </div>
 
         <!-- Body section-->
-        <div>
-            <span class="bold" id="sarah">Hi Lior :)</span>
-            <p class="bold">:O</p>
-            <form action="">
-                <input type="text"/>
-                <input type="submit" value="Submit">
-            </form>
+        <div class="main">
+            <div class="resume">
+                <h2>Resume</h2>
+                <p>Let me tell you more about myself</p>
+            </div>
             <div>
                 <h2>Things to add</h2>
                 <ul>
@@ -37,7 +35,12 @@
                 </ul>
             </div>
         </div>
-
-        <!-- Banner section-->
     </body>
+    <footer>
+        <form action="">
+            <h3>Let me know if you have any questions!</h3>
+            <input type="text"/>
+            <input type="submit" value="Submit">
+        </form>
+    </footer>
 </html>
