Added more sections, navigation bar, and contact links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
+        <!-- Nav section-->
+        <div class="nav">
+            <a href=#about class="nav-links">About Me</a>
+            <a href=#resume class="nav-links">Resume</a>
+            <a href=#projects class="nav-links">Projects</a>
+            <a href=#contact class="nav-links">Contact</a>
+        </div>
         <!-- Banner section-->
         <div class="banner">
             <h1>Hi, I'm Sarah</h1>
@@ -16,8 +23,16 @@
 
         <!-- Body section-->
         <div class="main">
-            <div class="resume">
+            <div class="chunk" id="about">
+                <h2>About Me</h2>
+                <p>Let me tell you more about myself</p>
+            </div>
+            <div class="chunk" id="resume">
                 <h2>Resume</h2>
+                <p>This is my relevant resume stuff</p>
+            </div>
+            <div class="chunk" id="projects">
+                <h2>Projects</h2>
                 <p>Let me tell you more about myself</p>
             </div>
             <div>
@@ -33,6 +48,20 @@
                         <div></div><span>Projects</span>
                     </li>
                 </ul>
+            </div>
+            <div class="chunk" id="contact">
+                <h2>Contact Me Here</h2>
+                <div class="contact-links">
+                    <a class="contact-link" href="https://github.com/sdovgin" target="_blank">
+                        Github
+                    </a>
+                    <a class="contact-link" href="index.html">
+                        Email
+                    </a>
+                    <a class="contact-link" href="https://www.linkedin.com/in/sarah-dovgin/" target="blank">
+                        LinkedIn
+                    </a>
+                  </div>
             </div>
         </div>
     </body>
