Pink color and font styling

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>SDovgin</title>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- Nav section-->
@@ -35,7 +37,7 @@
                 <h2>Projects</h2>
                 <p>Let me tell you more about myself</p>
             </div>
-            <div>
+            <div class=chunk id="things-to-add">
                 <h2>Things to add</h2>
                 <ul>
                     <li>
