Adding in experience sections

--- a/index.html
+++ b/index.html
@@ -35,7 +35,26 @@
             </div>
             <div class="chunk" id="projects">
                 <h2>Projects</h2>
-                <p>Let me tell you more about myself</p>
+                    <div class="experiences">
+                        <div class="contact-link">
+                            <h1>H1</h1>
+                            <h2>H2</h2>
+                            <ul>
+                                <li>
+                                    <div>add 1</div>
+                                </li>
+                                <li>
+                                    <div>add 2</div>
+                                </li>
+                                <li>
+                                    <div>add 3</div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="contact-link">Experience 2</div>
+                        <div class="contact-link">Experience 3</div>
+                    <p>Let me tell you more about myself</p>
+                </div>
             </div>
             <div class=chunk id="things-to-add">
                 <h2>Things to add</h2>
