--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <!-- Nav section-->
         <div class="nav">
             <a href=#about class="nav-links">About Me</a>
-            <a href=#resume class="nav-links">Resume</a>
             <a href=#projects class="nav-links">Projects</a>
+            <a href=#resume class="nav-links">Resume</a>
             <a href=#contact class="nav-links">Contact</a>
         </div>
         <!-- Banner section-->
@@ -29,16 +29,16 @@
                 <h2>About Me</h2>
                 <p>Let me tell you more about myself</p>
             </div>
-            <div class="chunk" id="resume">
-                <h2>Resume</h2>
-                <p>This is my relevant resume stuff</p>
-            </div>
             <div class="chunk" id="projects">
                 <h2>Projects</h2>
+                <p>These are my relavant projects</p>
+            </div>
+            <div class="chunk" id="resume">
+                <h2>Resume</h2>
                     <div class="experiences">
-                        <div class="contact-link">
-                            <h1>H1</h1>
-                            <h2>H2</h2>
+                        <div class="experience-chunk">
+                            <h1>Company</h1>
+                            <h3>Year and Location</h3>
                             <ul>
                                 <li>
                                     <div>add 1</div>
@@ -51,8 +51,21 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="contact-link">Experience 2</div>
-                        <div class="contact-link">Experience 3</div>
+                        <div class="experience-chunk">
+                            <h1>Company</h1>
+                            <h3>Year and Location</h3>
+                            <ul>
+                                <li>
+                                    <div>add 1</div>
+                                </li>
+                                <li>
+                                    <div>add 2</div>
+                                </li>
+                                <li>
+                                    <div>add 3</div>
+                                </li>
+                            </ul>
+                        </div>
                     <p>Let me tell you more about myself</p>
                 </div>
             </div>
@@ -60,13 +73,13 @@
                 <h2>Things to add</h2>
                 <ul>
                     <li>
-                        <div></div><span>Resume</span>
+                        <div></div><span>Projects</span>
                     </li>
                     <li>
                         <div></div><span>More pages</span>
                     </li>
                     <li>
-                        <div></div><span>Projects</span>
+                        <div></div><span>Resume</span>
                     </li>
                 </ul>
             </div>
