Adding resume information

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>SDovgin</title>
+        <title>Sarah Dovgin</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400&display=swap" rel="stylesheet">
@@ -37,8 +37,8 @@
                 <h2>Resume</h2>
                     <div class="experiences">
                         <div class="experience-chunk">
-                            <h1>Company</h1>
-                            <h3>Year and Location</h3>
+                            <h1>Data Engineer @ OM1</h1>
+                            <h3>May 2021 - Present in Boston, MA</h3>
                             <ul>
                                 <li>
                                     <div>add 1</div>
@@ -52,8 +52,8 @@
                             </ul>
                         </div>
                         <div class="experience-chunk">
-                            <h1>Company</h1>
-                            <h3>Year and Location</h3>
+                            <h1>Java Teaching Assistant @ Case Western Reserve Univeristy</h1>
+                            <h3>August 2020 - December 2020 in Cleveland, OH</h3>
                             <ul>
                                 <li>
                                     <div>add 1</div>
@@ -66,7 +66,66 @@
                                 </li>
                             </ul>
                         </div>
-                    <p>Let me tell you more about myself</p>
+                        <div class="experience-chunk">
+                            <h1>Software Development Intern @ Amazon</h1>
+                            <h3>June 2020 - August 2020 in Seattle, WA</h3>
+                            <ul>
+                                <li>
+                                    <div>add 1</div>
+                                </li>
+                                <li>
+                                    <div>add 2</div>
+                                </li>
+                                <li>
+                                    <div>add 3</div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="experience-chunk">
+                            <h1>Software Test Automation Intern @ Siemens Healthineers</h1>
+                            <h3>June 2019 - December 2019 in Hoffman Estates, IL</h3>
+                            <ul>
+                                <li>
+                                    <div>add 1</div>
+                                </li>
+                                <li>
+                                    <div>add 2</div>
+                                </li>
+                                <li>
+                                    <div>add 3</div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="experience-chunk">
+                            <h1>Student Researcher @ Case Western Reserve University</h1>
+                            <h3>March 2017 - May 2018 in Cleveland, OH</h3>
+                            <ul>
+                                <li>
+                                    <div>add 1</div>
+                                </li>
+                                <li>
+                                    <div>add 2</div>
+                                </li>
+                                <li>
+                                    <div>add 3</div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="experience-chunk">
+                            <h1>Student Researcher @ University of Chicago</h1>
+                            <h3>June 2013 - May 2016 in Chicago, IL</h3>
+                            <ul>
+                                <li>
+                                    <div>add 1</div>
+                                </li>
+                                <li>
+                                    <div>add 2</div>
+                                </li>
+                                <li>
+                                    <div>add 3</div>
+                                </li>
+                            </ul>
+                        </div>
                 </div>
             </div>
             <div class=chunk id="things-to-add">
